--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 .venv/
 __pycache__/
 *.pyc
-git add .gitignore
+config.py
+.env
+*.env
+config_local.py
+**/__pycache__/
+**/*.pyc
+.DS_Store
+.idea/
